--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>Lothereum</title>
   </head>
   <body>
+    <script type="text/javascript" src="%PUBLIC_URL%/web3.min.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
